True fix for text input sizing, placeholder alignment

--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,12 @@ header {
 }
 
 textarea {
-    min-width: 250px;
-    min-height: 110px;
-    max-width: 250px;
-    max-height: 110px;   
+    resize: none;
+}
+
+::placeholder {
+    text-align: right;
+    transform: translateY(80px);
 }
 
 #form {
